edit book update

--- a/views/worker_edit_book.jade
+++ b/views/worker_edit_book.jade
@@ -33,18 +33,14 @@ block content
                                 i.fa.fa-times-circle.text-danger(style='font-size: 40px;margin-bottom: 20px;')
                             .col-xs-8.text-left
                                 span.h3.text-danger(style='margin-top: 7px; display: inline-block;') Niepoprawne dane
+                    
+                    table.table.table-striped.table-hover
+                        thead
+                            tr
+                                th Tytuł książki
+                                th.text-right(style="padding-right: 10px;") Akcja
+                        tbody#edit_books_table.text-left
                     form#add_form.form-horizontal
-                        .form-group
-                            label.control-label.col-xs-3 Wybierz książkę:
-                            .col-xs-9
-                                select.form-control
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
-                                    option Zbrodnia i kara
                         .form-group
                             label.control-label.col-xs-3 Tytuł
                             .col-xs-9
@@ -77,10 +73,6 @@ block content
                                 input#add_file.hide(type='file', value='Przeglądaj')
                                 button#add_file_button.btn(type='button', style='background-color: #F5F5F5; color: #555; border: 1px solid #CCC') Przeglądaj
                         .form-group
-                            label.control-label.col-xs-3 Słowa kluczowe
-                            .col-xs-9
-                                input.form-control(type='text', placeholder='filozofia nowela')
-                        .form-group
                             label.control-label.col-xs-3 Opis
                             .col-xs-9
                                 textarea.form-control(style='min-height: 150px; font-size: 14px; line-height: 18px; padding: 5px;', placeholder='Powieść Fiodora Dostojewskiego napisana w 1866 i w tym samym roku opublikowana w odcinkach w czasopiśmie Russkij Wiestnik. W formie książkowej ukazała się w 1867, a w Polsce wydano ją po raz pierwszy w latach 1887–1888.')
@@ -91,3 +83,6 @@ block content
                         i.fa.fa-check-circle.text-success(style='font-size: 120px;')
                         br
                         span.h3.text-success Pomyślnie zaktualizowano książkę!
+
+block scripts
+    script(src='/javascripts/worker.js')
