--- a/views/layout.jade
+++ b/views/layout.jade
@@ -154,15 +154,15 @@ html
 							span.copyright © 2007-2015 Biblioteka Online Kraków
 							.hr.hr-fading
 							span.links
-								a(href='#') Najpopularniejsze
+								a(href='/') Najpopularniejsze
 								|  
-								a(href='#') Polecamy
+								a(href='/') Polecamy
 								|  
-								a(href='#') Nowości
+								a(href='/') Nowości
 								|  
-								a(href='#') Działy
+								a(href='/') Działy
 								|  
-								a(href='#') Spis Alfabetyczny
+								a(href='/') Spis Alfabetyczny
 						.col-md-6.text-center
 							a.to-top(href='#', title='Powrót do góry')
 								img(src='/images/top.png', alt='Powrót do góry')
