Borrowed books, and prolonging

--- a/views/user.jade
+++ b/views/user.jade
@@ -10,8 +10,8 @@ block content
                     ul.list-group
                         li.list-group-item Książki
                         li.list-group-item
-                            a(href='user-borrowed-books.html') Wypożyczone książki
+                            a(href='/user/books') Wypożyczone książki
                         li.list-group-item
-                            a(href='user-prolongs-book.html') Prolonguj książkę
+                            a(href='/user/prolong') Prolonguj książkę
                 .col-md-9.text-center
                     h2.text-success Witamy w panelu użytkownika.
