--- a/views/user_prolong.jade
+++ b/views/user_prolong.jade
@@ -10,10 +10,12 @@ block content
                     ul.list-group
                         li.list-group-item Książki
                         li.list-group-item
-                            a(href='user-borrowed-books.html') Wypożyczone książki
+                            a(href='/user/books') Wypożyczone książki
                         li.list-group-item
-                            a(href='user-prolongs-book.html') Prolonguj książkę
+                            a(href='/user/prolong') Prolonguj książkę
                 .col-md-9.text-center
+                    if auth
+                        input(type="hidden", name="id", value="#{auth.id}")
                     h2.text-success Prolonguj książkę.
                     table.table.table-hover
                         thead
@@ -21,19 +23,6 @@ block content
                                 th Tytuł
                                 th Data zwrotu
                                 th
-                        tbody
-                            tr
-                                td Zbrodnia i kara
-                                td 17 stycznia 2016
-                                td
-                                    a(href='#') Prolonguj
-                            tr
-                                td Matematyka dyskretna
-                                td 18 stycznia 2016
-                                td
-                                    a(href='#') Prolonguj
-                            tr
-                                td Perfekcyjna Pani Domu
-                                td 18 stycznia 2016
-                                td
-                                    a(href='#') Prolonguj
+                        tbody#prolong_books
+block scripts
+    script(src='/javascripts/user.js')
