--- a/views/worker_add_category.jade
+++ b/views/worker_add_category.jade
@@ -25,6 +25,8 @@ block content
                         li.list-group-item Zarządzaj czytelnikami
                         li.list-group-item
                             a(href='/worker/add-del-user') Zablokuj/Odblokuj użytkownika
+                        li.list-group-item
+                            a(href='/worker/return-book') Zwróć książkę
                 .col-md-9
                     #add_fail(style='display: none')
                         .row
