--- a/views/worker.jade
+++ b/views/worker.jade
@@ -25,5 +25,7 @@ block content
                         li.list-group-item Zarządzaj czytelnikami
                         li.list-group-item
                             a(href='/worker/add-del-user') Zablokuj/Odblokuj użytkownika
+                        li.list-group-item
+                            a(href='/worker/return-book') Zwróć książkę
                 .col-md-9.text-center
                     h2.text-success Witamy w panelu bibliotekarza.
